--- a/knowledge/arts/literature/epics/mahabharatam/template_qna.yaml
+++ b/knowledge/arts/literature/epics/mahabharatam/template_qna.yaml
@@ -1,57 +1,47 @@
 version: 3
-domain: <The knowledge domain which is used in prompts to the teacher model during synthetic data generation. The domain should be brief such as the title to a textbook chapter or section.>
-created_by: <The GitHub username of the contributor.>
+domain: "Mahabharatam - Hindu Epic and Its Teachings"
+created_by: Kalyani5744
 seed_examples:
   - context: |
-        <Context from the document associated with this set of sample q&a pairs.>
+        The Mahabharatam is one of the greatest Hindu epics, composed by Sage Vyasa. It narrates the story of the Kuru dynasty, the rivalry between the Pandavas and Kauravas, the Bhagavad Gita's teachings, and key moral and philosophical lessons.
     questions_and_answers:
       - question: |
-           <A question used for synthetic data generation. Based upon the previous context.>
+           Who is the author of the Mahabharatam?
         answer: |
-           <The desired response for the question. Based upon the previous context.>
+           The Mahabharatam was composed by Sage Vyasa.
       - question: |
+           What is the Bhagavad Gita, and where is it found in the Mahabharatam?
         answer: |
+           The Bhagavad Gita is a sacred scripture containing the teachings of Lord Krishna to Arjuna, found in the Bhishma Parva of the Mahabharatam.
       - question: |
+           Why did the Kurukshetra war take place?
         answer: |
+           The Kurukshetra war occurred due to the conflict between the Pandavas and the Kauravas over the rightful claim to the throne of Hastinapura.
   - context: |
+        The Mahabharatam contains various characters, including divine beings, warriors, sages, and kings. It teaches lessons on dharma (righteousness), karma (action), and moksha (liberation).
     questions_and_answers:
       - question: |
+           Who were the five Pandavas?
         answer: |
+           The five Pandavas were Yudhishthira, Bhima, Arjuna, Nakula, and Sahadeva.
       - question: |
+           What role did Lord Krishna play in the Mahabharatam?
         answer: |
+           Lord Krishna was the charioteer of Arjuna and gave the teachings of the Bhagavad Gita before the war began.
       - question: |
+           What is the significance of Draupadi's disrobing incident?
         answer: |
-  - context: |
-    questions_and_answers:
-      - question:
-        answer: |
-      - question: |
-        answer: |
-      - question: |
-        answer: |
-  - context: |
-    questions_and_answers:
-      - question: |
-        answer: |
-      - question: |
-        answer: |
-  - context: |
-    questions_and_answers:
-      - question: |
-        answer: |
-      - question: |
-        answer: |
-      - question: |
-        answer: |
+           Draupadi’s disrobing incident in the Kaurava court symbolized the humiliation of dharma, which later led to the Pandavas seeking justice in the Kurukshetra war.
 document_outline: |
-  <A brief summary of the document.>
+  This document provides an overview of the Mahabharatam, its key events, characters, and philosophical teachings. It covers major aspects such as the Bhagavad Gita, the Kurukshetra war, and the moral lessons conveyed through the epic.
 document:
-  repo: https://github.com/<username>/<repo>.git
-  commit: <full commit SHA>
+  repo: https://github.com/Kalyani5744/mahabharatam-knowledge.git
+  commit: 96d7e43fc298264aec09c1af6831f45124ae2b1a
   patterns:
-    - <FILENAME>.md
-    - <FILENAME>.pdf
+    - mahabharatam.md
+    - teachings.pdf
     - "*.md"
     - "*.pdf"
-    - "<directory>/*.md"
+    - "epic_texts/*.md"
+
 
